force-app/main/default/objects/Map_User_Access__c/Map_User_Access__c.object-meta.xml
<CustomObject>
    <description>Tracks user access to Capability Maps for favorites/recently viewed</description>
    <label>Map User Access</label>
    <nameField>
        <displayFormat>MUA-{000000000}</displayFormat>
        <label>Access ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map User Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>