force-app/main/default/objects/Map_User_Access__c/fields/Capability_Map__c.field-meta.xml
<CustomField>
    <fullName>Capability_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The capability map that was accessed</description>
    <label>Capability Map</label>
    <referenceTo>Capability_Map__c</referenceTo>
    <relationshipLabel>User Accesses</relationshipLabel>
    <relationshipName>User_Accesses</relationshipName>
    <type>Lookup</type>
</CustomField>