force-app/main/default/objects/Map_User_Access__c/fields/Is_Favorite__c.field-meta.xml
<CustomField>
    <fullName>Is_Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User marked this map as a favorite</description>
    <label>Is Favorite</label>
    <type>Checkbox</type>
</CustomField>