force-app/main/default/objects/Map_User_Access__c/fields/Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>Last_Accessed__c</fullName>
    <description>When the user last accessed this map</description>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>