force-app/main/default/objects/Map_User_Access__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who accessed the map</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Map Accesses</relationshipLabel>
    <relationshipName>Map_Accesses</relationshipName>
    <type>Lookup</type>
</CustomField>